--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <h1><b>ABOUT</b></h1>
 <h3>Hi all my name is Vishnu Murthy M and I have completed my Bechalor of Enginnering in CSE and I have been actively looking for full time jobs.</h3>
 <hr>
-<a href="/Education.html"><button>Education</button></a>
+<a href="/index2.html"><button>Education</button></a>
 <br/>
-<a href="/skill.html"><button>Skills</button></a>
+<a href="/index3.html"><button>Skills</button></a>
 <br>
-<a href="/Resume.html"><button>Download Resume</button></a>
+<a href="/index4.html"><button>Download Resume</button></a>
 <hr>
 <footer>
   <a href="https://www.linkedin.com/in/vishnu-murthy-m-46064122a/"><img src="linked.in.png"height="75"width="75"></a>
